style: auth pages pep8 fix

--- a/main/page_auth/templates/login.html
+++ b/main/page_auth/templates/login.html
@@ -13,7 +13,7 @@
   <div class="login-form-background">
     <div class="login-container">
       <!-- Error Messages -->
-      {% for error in form.email.errors %} 
+      {% for error in form.email.errors %}
       <div class="alert alert-danger" role="alert">{{ error }}</div>
       {% endfor %}
 
@@ -26,7 +26,8 @@
       <br>
       <div class="gap-2 google-login-container">
         <a href="{{ url_for('auth_page.oauth2_authorise', provider='google') }}" class="btn google-btn">
-          <img class="google-icon" src="https://img.icons8.com/?size=100&id=17949&format=png&color=000000" alt="Google Icon"> Google
+          <img class="google-icon" src="https://img.icons8.com/?size=100&id=17949&format=png&color=000000"
+            alt="Google Icon"> Google
         </a>
       </div>
       <br>
@@ -39,23 +40,24 @@
       <!-- Form -->
       <div id="user-form">
         <form action="#" method="POST" name="Login">
-          {{  form.csrf_token }}
+          {{ form.csrf_token }}
           <!-- Email -->
           <div class="form-group login-form">
             <div class="user-container">
               <i class="fas fa-envelope"></i>
-              {{ form.email(class_="form-control required-field", placeholder="Email", id_="enter-email", maxlength_="100", autocomplete_="email") }}
+              {{ form.email(class_="form-control required-field", placeholder="Email", id_="enter-email",
+              maxlength_="100", autocomplete_="email") }}
             </div>
           </div>
           <!-- Password -->
           <div class="form-group login-form">
             <div class="pass-container">
               <i class="fas fa-lock"></i>
-              {{ form.password(class_="form-control required-field", 
-                placeholder="Password",
-                id_="enter-password", minlength_="8",
-                maxlength_="24",
-                autocomplete_="current-password") }}
+              {{ form.password(class_="form-control required-field",
+              placeholder="Password",
+              id_="enter-password", minlength_="8",
+              maxlength_="24",
+              autocomplete_="current-password") }}
             </div>
           </div>
           <!-- Submit Button -->
