--- a/main/page_authenticate_item/templates/authenticate_item.html
+++ b/main/page_authenticate_item/templates/authenticate_item.html
@@ -16,23 +16,24 @@
         <span class="badge {% if authentication == 1 %}bg-warning
           {% elif authentication == 2 %}bg-success
           {% elif authentication == 3 %}bg-danger
-          {% else %}bg-secondary{% endif %} p-2"
-        >
+          {% else %}bg-secondary{% endif %} p-2">
           {% if authentication == 1 %}
-            Authentication Pending
+          Authentication Pending
           {% elif authentication == 2 %}
-            Authenticated
+          Authenticated
           {% elif authentication == 3 %}
-            Authentication Declined
+          Authentication Declined
           {% else %}
-            Not Authenticated
+          Not Authenticated
           {% endif %}
         </span>
       </div>
       <!-- Messages -->
-      <div class="messages" id="{% if authentication != 1 or not (is_expert or is_creator) %}messages-tall{% elif is_creator%}messages-mid{% else %}messages-short{% endif %}">
+      <div class="messages"
+        id="{% if authentication != 1 or not (is_expert or is_creator) %}messages-tall{% elif is_creator%}messages-mid{% else %}messages-short{% endif %}">
         {% for message in messages %}
-        <div class="message {% if message.sender_id == current_user.id or (current_user.role == 3 and message.sender.role == 1) %}my-messages{% else %}other-messages{% endif %}">
+        <div
+          class="message {% if message.sender_id == current_user.id or (current_user.role == 3 and message.sender.role == 1) %}my-messages{% else %}other-messages{% endif %}">
           <p>{{ message.message_text }}</p>
           {% if message.image_urls %}
           <div class="image-gallery">
